@@ -1,3 +1,7 @@
+2003-09-14  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* Makefile (DISTFILES): added nethack-compat.el
+
 2003-09-13  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* Makefile (NH_VER): bumped to 3.4.2
